fixed alignment for column one

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -96,6 +96,7 @@ footer{
     height: 75%;
     padding:20px;
     border-radius:10px;
+    text-align: left;
     /* box-shadow */
    
 }
